--- a/src/scss/Main/_CategorySelection.scss
+++ b/src/scss/Main/_CategorySelection.scss
@@ -39,7 +39,7 @@
 				sans-serif;
 			font-size: 2rem;
 			line-height: 1.5;
-			z-index: 300;
+			z-index: 3;
 			transition: color 0.25s;
 		}
 		@media only screen and (max-width: $medium) {
